tests/semantic/type_as3/type_as3.err
Error: Undefined relation B in file type_as3.dl at line 17
B(as(0,List)) :- true.
^----------------------
Error: Ambiguous constant (unable to deduce type) in file type_as3.dl at line 17
B(as(0,List)) :- true.
-----^-----------------
Error: Ambiguous constant (unable to deduce type) in file type_as3.dl at line 18
A(as(0,List)) :- true.
-----^-----------------
3 errors generated, evaluation aborted
