tests/semantic/type_as3/type_as3.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

//
// type cast with "as" 3
//
// Created for #1640.
//


.type List = [ head:number, tail: List]

.decl A(l:List)
B(as(0,List)) :- true.
A(as(0,List)) :- true.

.output A
